--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -1,3 +1,61 @@
 @import "variables";
 @import "mixins";
 @import "reboot";
+
+.container {
+    display: flex;
+    flex-direction: column;
+    background-color: $white;
+    width: 85%;
+    margin: 100px auto;
+    padding: 30px;
+    padding-top: 0;
+}
+
+.top-info {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    .avatar {
+        border-radius: 50%;
+        width: $image-size;
+        height: $image-size;
+        margin-top: -50px;
+        margin-bottom: 10px;;
+    }
+  
+    h1 {
+        @include heading(2.5rem);
+    }
+
+    h2 {
+        @include heading(2rem);
+    }
+}
+
+.content {
+    h3 {
+        @include heading(1.2rem);
+        color: $primary-color;
+    }
+
+    .edu-expierence {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        margin-bottom: 15px;
+    
+        .edu-content {
+            background-color: $gray-light;
+            width: 85%;
+            padding: 0 10px;
+        }
+    }
+}
+
+
+
+
+
+
