--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -10,6 +10,11 @@
     margin: 100px auto;
     padding: 30px;
     padding-top: 0;
+
+    hr {
+        border: none;
+        border-top: solid 2px lighten($color: $gray-dark, $amount: 50%);
+    }
 }
 
 .top-info {
@@ -22,7 +27,7 @@
         width: $image-size;
         height: $image-size;
         margin-top: -50px;
-        margin-bottom: 10px;;
+        margin-bottom: 10px;
     }
   
     h1 {
@@ -30,14 +35,16 @@
     }
 
     h2 {
-        @include heading(2rem);
+        @include heading(1.6rem);
     }
 }
 
 .content {
+
     h3 {
         @include heading(1.2rem);
         color: $primary-color;
+        margin-top: 20px;
     }
 
     .edu-expierence {
@@ -48,7 +55,7 @@
     
         .edu-content {
             background-color: $gray-light;
-            width: 85%;
+            width: 88%;
             padding: 0 10px;
         }
     }
