--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -2,67 +2,62 @@
 @import "mixins";
 @import "reboot";
 
+// TODO feedback: 建议在不同的scss文件去管理样式
 .container {
-    display: flex;
-    flex-direction: column;
-    background-color: $white;
-    width: 85%;
-    margin: 100px auto;
-    padding: 30px;
-    padding-top: 0;
+  display: flex;
+  flex-direction: column;
+  background-color: $white;
+  width: 85%;
+  margin: 100px auto;
+  padding: 30px;
+  padding-top: 0;
 
-    hr {
-        border: none;
-        border-top: solid 2px lighten($color: $gray-dark, $amount: 50%);
-    }
+  hr {
+    border: none;
+    border-top: solid 2px lighten($color: $gray-dark, $amount: 50%);
+  }
 
-    p {
-        font-size: 15px;
-    }
+  p {
+    font-size: 15px;
+  }
 }
 
 .top-info {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 
-    .avatar {
-        border-radius: 50%;
-        width: $image-size;
-        height: $image-size;
-        margin-top: -50px;
-        margin-bottom: 10px;
-    }
+  .avatar {
+    border-radius: 50%;
+    width: $image-size;
+    height: $image-size;
+    margin-top: -50px;
+    margin-bottom: 10px;
+  }
 
-    h1, h2 {
-        margin-top: 0;
-    }
+  h1,
+  h2 {
+    margin-top: 0;
+  }
 }
 
 .content {
+  h3 {
+    @include heading(1.2rem);
+    color: $primary-color;
+    margin-top: 20px;
+  }
 
-    h3 {
-        @include heading(1.2rem);
-        color: $primary-color;
-        margin-top: 20px;
-    }
+  .edu-expierence {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    margin-bottom: 15px;
 
-    .edu-expierence {
-        display: flex;
-        flex-direction: row;
-        justify-content: space-between;
-        margin-bottom: 15px;
-    
-        .edu-content {
-            background-color: $gray-light;
-            width: 88%;
-            padding: 0 10px;
-        }
+    .edu-content {
+      background-color: $gray-light;
+      width: 88%;
+      padding: 0 10px;
     }
+  }
 }
-
-
-
-
-
-
